[project]
name = "advcash"
version = "0.1.0"
description = ""
authors = [
    {name = "mikhail",email = "michaelglukhoff@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "aiogram (==2.25.1)",
    "aiohttp (==3.8.5)",
    "aiosignal (==1.3.1)",
    "async-timeout (==4.0.3)",
    "attrs (==23.1.0)",
    "babel (==2.9.1)",
    "certifi (==2023.7.22)",
    "charset-normalizer (==3.2.0)",
    "frozenlist (==1.4.0)",
    "idna (==3.4)",
    "isodate (==0.6.1)",
    "lxml (==4.9.3)",
    "magic-filter (==1.0.11)",
    "multidict (==6.0.4)",
    "platformdirs (==3.9.1)",
    "pytz (==2023.3)",
    "requests (==2.31.0)",
    "requests-file (==1.5.1)",
    "requests-toolbelt (==1.0.0)",
    "six (==1.16.0)",
    "urllib3 (==2.0.4)",
    "yarl (==1.9.2)",
    "zeep (==4.2.1)",
    "poetry-core (==2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
